fixed the body and alignments

--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@ nav > h1 {
 
 /* Main content */
 main {
-    padding: 70px 30px 10px;
+    padding: 40px 30px 10px;
 }
 
 /* Input section */
@@ -58,7 +58,7 @@ main {
 /* Section headings */
 section > h2 {
     font-family: sans-serif;
-    font-weight: 900;
+    
 }
 
 /* Ingredients list */
@@ -136,17 +136,6 @@ ul {
 
 
 /* Other buttons */
-.newBtn {
-    border: none;
-    border-radius: 5px;
-    background-color: #FF9800;
-    color: white;
-    margin-top: 10px;
-    font-size: 0.7rem;
-    padding: 10px;
-    margin-bottom: 7px;
-    display: flex;
-}
 
 /* Utility classes */
 .naija {
